# tokenfs-algos

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  deny.toml  index.html  rust-toolchain.toml  style.css
crates/tokenfs-algos/: Cargo.toml
crates/tokenfs-algos-corpora/: Cargo.toml
crates/tokenfs-algos-corpora/src/: bytes.rs  ground_truth.rs  lib.rs  structure.rs  vector.rs
crates/tokenfs-algos-corpora/src/presets/: mod.rs
crates/tokenfs-algos-corpora/tests/: clustering_corpus_smoke.rs
crates/tokenfs-algos-no-std-smoke/: Cargo.toml
crates/tokenfs-algos-no-std-smoke/src/: lib.rs
crates/tokenfs-algos/benches/: approx_bloom.rs  approx_hll.rs  bitmap_set_ops.rs  bits_bit_pack.rs  bits_popcount.rs  bits_rank_select.rs  bits_streamvbyte.rs  hash_batched.rs  hash_set_membership.rs  histogram.rs  iai_primitives.rs  permutation_rcm.rs  planner.rs  primitives.rs  similarity.rs
crates/tokenfs-algos/benches/support/: mod.rs
crates/tokenfs-algos/examples/: bench_compare.rs  build_pipeline.rs  cdc_chunking.rs  classify_block.rs  content_match.rs  cross_encoder.rs  dispatch_explain.rs  inverted_index.rs  profile_primitives.rs  similarity_scan.rs  streaming_entropy.rs
crates/tokenfs-algos/src/: approx.rs  distribution.rs  error.rs  hash.rs  identity.rs  lib.rs  math.rs  prelude.rs  sketch.rs  sketch_p2.rs
crates/tokenfs-algos/src/approx/bloom_kernels/: avx2.rs  avx512.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/approx/hll/kernels/: avx2.rs  avx512.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/bitmap/: cardinality.rs  containers.rs  difference.rs  intersect.rs  mod.rs  union.rs  xor.rs
crates/tokenfs-algos/src/bitmap/kernels/: array_x_array_scalar.rs  array_x_array_sse42.rs  array_x_bitmap_avx2.rs  array_x_bitmap_scalar.rs  bitmap_x_bitmap_avx2.rs  bitmap_x_bitmap_avx512.rs  bitmap_x_bitmap_neon.rs  bitmap_x_bitmap_scalar.rs  mod.rs
crates/tokenfs-algos/src/bits/: bit_pack.rs  mod.rs  popcount.rs  rank_select.rs  streamvbyte.rs
crates/tokenfs-algos/src/bits/bit_pack/kernels/: avx2.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/bits/popcount/kernels/: avx2.rs  avx512.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/bits/rank_select/kernels/: scalar.rs
crates/tokenfs-algos/src/bits/streamvbyte/kernels/: avx2.rs  neon.rs  scalar.rs  ssse3.rs
crates/tokenfs-algos/src/byteclass/: mod.rs  utf8_avx2.rs  utf8_avx512.rs  utf8_neon.rs
crates/tokenfs-algos/src/byteclass/kernels/: avx2.rs  avx512.rs  avx512_vbmi.rs  neon.rs  scalar.rs  sve2.rs
crates/tokenfs-algos/src/chunk/: mod.rs  recursive.rs
crates/tokenfs-algos/src/dispatch/: mod.rs
crates/tokenfs-algos/src/dispatch/planner/: consts.rs  mod.rs  rule.rs  rules.rs  signals.rs  tunes.rs
crates/tokenfs-algos/src/divergence/: mod.rs
crates/tokenfs-algos/src/entropy/: conditional.rs  joint.rs  min.rs  mod.rs  ngram.rs  renyi.rs  shannon.rs
crates/tokenfs-algos/src/entropy/kernels/: scalar.rs
crates/tokenfs-algos/src/fingerprint/: mod.rs  neon.rs
crates/tokenfs-algos/src/fingerprint/kernels/: avx2.rs  scalar.rs
crates/tokenfs-algos/src/format/: mod.rs
crates/tokenfs-algos/src/hash/: batched.rs  blake3.rs  mod.rs  set_membership.rs  sha256.rs
crates/tokenfs-algos/src/hash/kernels/: scalar.rs
crates/tokenfs-algos/src/hash/set_membership/kernels/: avx2.rs  avx512.rs  neon.rs  scalar.rs  sse41.rs
crates/tokenfs-algos/src/hash/sha256/kernels/: aarch64_sha2.rs  scalar.rs  x86_shani.rs
crates/tokenfs-algos/src/histogram/: bench_internals.rs  byte.rs  kernels.rs  mod.rs  ngram.rs  pair.rs  summary.rs  topk.rs
crates/tokenfs-algos/src/histogram/kernels/: avx2_palette_u32.rs  avx2_rle_stripe4_u32.rs  avx2_stripe4_u32.rs  avx512_bitalg_bitsliced.rs  avx512_gfni_bitsliced.rs
crates/tokenfs-algos/src/paper/: mod.rs
crates/tokenfs-algos/src/permutation/: hilbert.rs  mod.rs  rabbit.rs  rcm.rs
crates/tokenfs-algos/src/permutation/rabbit/kernels/: avx2.rs  avx512.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/primitives/: histogram_avx2.rs  histogram_scalar.rs  mod.rs  prefetch.rs
crates/tokenfs-algos/src/runlength/: mod.rs
crates/tokenfs-algos/src/runlength/kernels/: avx2.rs  neon.rs  scalar.rs  sve2.rs
crates/tokenfs-algos/src/search/: bitap.rs  mod.rs  packed_dfa.rs  packed_pair.rs  rabin_karp.rs  shift_or.rs  two_way.rs
crates/tokenfs-algos/src/selector/: mod.rs
crates/tokenfs-algos/src/similarity/: fuzzy.rs  kernels.rs  kernels_gather.rs  lsh.rs  minhash.rs  mod.rs  simhash.rs  tests.rs
crates/tokenfs-algos/src/similarity/fuzzy/: ctph.rs  tlsh_like.rs
crates/tokenfs-algos/src/similarity/hnsw/: candidates.rs  filter.rs  graph.rs  header.rs  mod.rs  select.rs  tests.rs  view.rs  visit.rs  walker.rs
crates/tokenfs-algos/src/similarity/hnsw/kernels/: auto.rs  avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse41.rs
crates/tokenfs-algos/src/similarity/kernels/: avx2.rs  neon.rs  scalar.rs  sve.rs
crates/tokenfs-algos/src/similarity/kernels_gather/: avx2.rs  avx512.rs  neon.rs
crates/tokenfs-algos/src/sketch/kernels/: neon.rs  scalar.rs  sse42.rs
crates/tokenfs-algos/src/structure/: mod.rs
crates/tokenfs-algos/src/vector/: batch.rs  distance.rs  mod.rs  tests.rs
crates/tokenfs-algos/src/vector/kernels/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs
crates/tokenfs-algos/src/windows/: mod.rs
crates/tokenfs-algos/tests/: avx2_parity.proptest-regressions  avx2_parity.rs  entropy_properties.rs  fingerprint_f22.rs  histogram_invariants.rs  histogram_kernels.rs  hnsw_walker_smoke.rs  integration_phase_c.rs  known_values.rs  neon_parity.proptest-regressions  neon_parity.rs  parity.rs  public_histogram_api.rs  sve_parity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bitmap_intersect_parity.rs  bits_bit_pack_round_trip.rs  bits_rank_select_consistency.rs  bits_streamvbyte_round_trip.rs  byteclass_utf8_dispatch_parity.rs  chunk_fastcdc_no_panic.rs  chunk_gear_no_panic.rs  hash_batched_parity.rs  hash_set_membership_parity.rs  ngram_windows_no_panic.rs  permutation_apply_round_trip.rs  runlength_transitions_dispatch_parity.rs  vector_distance_parity.rs
(+148 files in other folders)
