[workspace]
members = [
    "crates/tokenfs-algos",
    "tools/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mjbommar/tokenfs-algos"
homepage = "https://github.com/mjbommar/tokenfs-algos"

[workspace.dependencies]
cfg-if = "1"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = { level = "allow", priority = -1 }
unwrap_used = "warn"

[profile.release]
debug = 1
lto = "thin"
codegen-units = 1

[profile.bench]
debug = 2
lto = "thin"
codegen-units = 1
