# Empty [workspace] table keeps `fuzz` out of the parent workspace so
# cargo-fuzz's RUSTFLAGS-heavy build doesn't bleed into the main library.
[workspace]

[package]
name = "tokenfs-algos-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tokenfs-algos]
path = "../crates/tokenfs-algos"
# Fuzz targets exercise the panicking surface (so we can prove the
# panic-free `try_*` siblings produce identical results) AND the
# per-backend pinned kernels (so SIMD-vs-scalar parity fuzzers can
# pin specific backends). Both gates are required for the manifest
# to compile end-to-end (audit-R10 T0.2).
features = ["userspace", "arch-pinned-kernels", "parallel", "blake3"]

# Each fuzz target is its own binary so cargo-fuzz can drive them
# independently. Run with: cargo +nightly fuzz run <target_name>

[[bin]]
name = "chunk_gear_no_panic"
path = "fuzz_targets/chunk_gear_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_fastcdc_no_panic"
path = "fuzz_targets/chunk_fastcdc_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ngram_windows_no_panic"
path = "fuzz_targets/ngram_windows_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "byteclass_utf8_dispatch_parity"
path = "fuzz_targets/byteclass_utf8_dispatch_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runlength_transitions_dispatch_parity"
path = "fuzz_targets/runlength_transitions_dispatch_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bits_streamvbyte_round_trip"
path = "fuzz_targets/bits_streamvbyte_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bits_bit_pack_round_trip"
path = "fuzz_targets/bits_bit_pack_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bits_rank_select_consistency"
path = "fuzz_targets/bits_rank_select_consistency.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitmap_intersect_parity"
path = "fuzz_targets/bitmap_intersect_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_distance_parity"
path = "fuzz_targets/vector_distance_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hash_batched_parity"
path = "fuzz_targets/hash_batched_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hash_set_membership_parity"
path = "fuzz_targets/hash_set_membership_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "permutation_apply_round_trip"
path = "fuzz_targets/permutation_apply_round_trip.rs"
test = false
doc = false
bench = false
