[package]
name = "tokenfs-algos-corpora"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Parameterized synthetic corpus generators for tokenfs-algos benches and tests."
publish = false

# Three-layer composable design (per docs/hnsw/components/CLUSTERING_FUZZ.md
# generalized to all 10 use cases):
#
#   Bytes layer     — uniform random / Markov / bit-flip-variants /
#                     byte-histogram-targeted
#   Structure layer — flat / file-Pareto-sized / time-snapshotted /
#                     hierarchical-doc-chunks
#   Vector layer    — F22 / MinHash / f32-embedding / i8-embedding /
#                     LSH-bands
#
# Each layer is ChaCha8-deterministic. Per-use-case presets ship as
# named constructors (presets::rootfs_near_dup, presets::rag, etc.).
# Used by HNSW Phase 4 builder validation, criterion bench harness,
# fuzz targets, and downstream bench-corpus runners.

[dependencies]
tokenfs-algos = { path = "../tokenfs-algos", version = "0.5", features = ["std", "userspace"] }

# rand_chacha gives us deterministic RNG output across architectures.
# Per docs/hnsw/research/DETERMINISM.md §8 — explicitly NOT std's
# DefaultHasher / thread_rng.
rand_chacha = "0.10"
rand_core = "0.9"

[lints]
workspace = true
