[package]
name = "tokenfs-algos-no-std-smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
test = false           # this crate exists to verify no_std lib build, not to run tests

[dependencies]
tokenfs-algos = { path = "../tokenfs-algos", version = "0.5", default-features = false, features = ["alloc"] }
