[package]
name = "tokenfs-algos"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hardware-accelerated byte-stream analysis primitives for TokenFS and related systems."
readme = "../../README.md"
publish = false

[features]
default = ["std", "avx2", "neon"]
std = []
alloc = []
nightly = []
bench-internals = []
calibration = ["std"]
parallel = ["dep:rayon"]
avx2 = []
avx512 = ["nightly"]
# AVX-512 sub-feature backends. All gate runtime detection (`is_x86_feature_
# detected!`) on the corresponding feature; compile-time gating uses only the
# umbrella `avx512` flag to keep the feature matrix small. The named features
# below are kept as dependent aliases so callers can express intent — they
# are no-ops at present beyond requiring `avx512`.
avx512_vbmi = ["avx512"]
avx512_vbmi2 = ["avx512"]
avx512_bitalg = ["avx512"]
avx512_gfni = ["avx512"]
avx512_vpclmulqdq = ["avx512"]
neon = []
sve = ["nightly"]
sve2 = ["nightly"]
# JSON loading for planner Tunes (see dispatch::planner::tunes::Tunes::from_json).
tunes-json = ["std", "dep:serde_json"]
# BLAKE3 content-addressable hash backend. Wraps the `blake3` crate
# (CC0-1.0 OR Apache-2.0 OR Apache-2.0-with-LLVM-exception, MIT-compatible)
# which already ships hand-tuned SSE4.1 / AVX2 / AVX-512 / NEON kernels;
# leaving it opt-in keeps the dependency surface tight for callers that
# only need SHA-256 or non-cryptographic mixers.
blake3 = ["dep:blake3", "std"]
# Hilbert curve ordering for `permutation::hilbert_2d` / `hilbert_nd`.
# Wraps the `fast_hilbert` (LUT-based 2D, no transitive deps) and
# `hilbert` (Skilling N-D) crates. Opt-in because the `hilbert` crate
# pulls non-trivial transitive deps (`num`, `rand`); the rest of the
# permutation surface (RCM, the shared `Permutation` type) stays
# dependency-free.
permutation_hilbert = ["std", "dep:fast_hilbert", "dep:hilbert", "dep:num"]

[dependencies]
cfg-if.workspace = true
bytemuck = { version = "1", optional = true }
libm = "0.2"
rayon = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
blake3 = { version = "1", default-features = false, features = ["std"], optional = true }
# Hilbert curve crates (gated on `permutation_hilbert` feature). Both
# are MIT-licensed and well-tested. `fast_hilbert` is no_std-compatible
# with no transitive deps; `hilbert` (Skilling) brings `num` (BigUint),
# `rand`, `criterion`, and `spectral` — only present in the dep tree
# when the feature is enabled.
fast_hilbert = { version = "2", optional = true }
hilbert = { version = "0.1", optional = true }
# `num` is the BigUint backend used by the `hilbert` crate's
# `hilbert_transform` return type. We only consume `num::BigUint` in
# `permutation::hilbert::hilbert_nd` (sort key) so the dep is gated on
# the same `permutation_hilbert` feature.
num = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
serde_json = "1"
# Mature pure-Rust succinct data structures crate. Used as a parity oracle
# for `bits::rank_select` tests only; not a runtime dependency.
sucds = "0.8"

[[bench]]
name = "histogram"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "primitives"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "similarity"
harness = false

[[bench]]
name = "planner"
harness = false

[[bench]]
name = "hash_batched"
harness = false

[[bench]]
name = "bits_popcount"
harness = false

[[bench]]
name = "bits_streamvbyte"
harness = false

[[bench]]
name = "bits_rank_select"
harness = false

[[bench]]
name = "hash_set_membership"
harness = false

[[bench]]
name = "bitmap_set_ops"
harness = false

[lints]
workspace = true
