[package]
name = "tokenfs-algos"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hardware-accelerated byte-stream analysis primitives for TokenFS and related systems."
readme = "../../README.md"
publish = false

[features]
# Default features. `std` is kept in default for ergonomic test/bench
# building (~50 test sites use std-only macros like `eprintln!`); the
# audit-R9 #4 concern about userspace OS probing
# (`std::thread::available_parallelism`, `/sys/devices/system/cpu/`
# reads) is addressed at the call-site level — those probes are now
# gated on the `userspace` feature, so kernel/FUSE consumers opting
# out of `userspace` do not pay them even with `std` enabled.
# Kernel/FUSE consumers should use
# `default-features = false, features = ["alloc"]` for the full
# kernel-safe surface (no panicking entry points, no OS probing).
default = ["std", "avx2", "neon"]
std = []
alloc = []
nightly = []
bench-internals = []
calibration = ["std"]
parallel = ["dep:rayon"]
avx2 = []
avx512 = ["nightly"]
# Ergonomic userspace umbrella: opts back into the panicking shape APIs
# that v0.3.x had on by default. Pulls in `std` since panicking is a
# no_std-incompatible behavior anyway. Kernel/FUSE/forensics consumers
# should NOT enable this — the default surface is already kernel-safe.
userspace = ["std", "panicking-shape-apis"]
# Panicking wrappers for shape/size/range/length-validating public APIs.
# When enabled (opt-in via `userspace` or directly), the existing
# panicking variants (e.g. `BitPacker::encode_u32_slice`,
# `streamvbyte_decode_u32`, `dot_f32_one_to_many`,
# `RankSelectDict::build`, `sha256_batch_st`, `signature_batch_simd`)
# are exposed alongside their `try_*` siblings. Disabled by default so
# kernel/FUSE consumers cannot accidentally compile panicking branches
# at the kernel boundary (audit-R5 #157, audit-R7-followup #1/3/4/14).
panicking-shape-apis = []
# Expose per-backend pinned SIMD kernel modules (`kernels::scalar`,
# `kernels::avx2`, `kernels::avx512`, `kernels::neon`, plus AVX-512
# sub-variants and SSE4.2 / AVX2-shape pinned kernels) as part of the
# crate's external API. These modules contain `unsafe` entry points that
# require the caller to uphold CPU-feature detection and bounds /
# alignment preconditions; the safe `kernels::auto` dispatcher (and any
# non-per-backend module) remains public unconditionally.
#
# Without this feature, per-backend modules are crate-private (`mod`,
# not `pub mod`) so external callers cannot bypass dispatch and trigger
# UB by invoking a kernel on a CPU lacking the required ISA. Internal
# callers (the dispatcher, sibling modules in this crate) continue to
# see them under both cfgs. Benches that target a specific pinned
# backend declare `required-features = ["arch-pinned-kernels"]`.
#
# Closes audit-R7 #17 / audit-R8 #5.
arch-pinned-kernels = []
# AVX-512 sub-feature backends. All gate runtime detection (`is_x86_feature_
# detected!`) on the corresponding feature; compile-time gating uses only the
# umbrella `avx512` flag to keep the feature matrix small. The named features
# below are kept as dependent aliases so callers can express intent — they
# are no-ops at present beyond requiring `avx512`.
avx512_vbmi = ["avx512"]
avx512_vbmi2 = ["avx512"]
avx512_bitalg = ["avx512"]
avx512_gfni = ["avx512"]
avx512_vpclmulqdq = ["avx512"]
neon = []
sve = ["nightly"]
sve2 = ["nightly"]
# JSON loading for planner Tunes (see dispatch::planner::tunes::Tunes::from_json).
tunes-json = ["std", "dep:serde_json"]
# BLAKE3 content-addressable hash backend. Wraps the `blake3` crate
# (CC0-1.0 OR Apache-2.0 OR Apache-2.0-with-LLVM-exception, MIT-compatible)
# which already ships hand-tuned SSE4.1 / AVX2 / AVX-512 / NEON kernels;
# leaving it opt-in keeps the dependency surface tight for callers that
# only need SHA-256 or non-cryptographic mixers.
blake3 = ["dep:blake3", "std"]
# Hilbert curve ordering for `permutation::hilbert_2d` / `hilbert_nd`.
# The 2D path wraps the LUT-based `fast_hilbert` crate (no transitive
# deps); the N-D path is implemented in this crate directly via
# Skilling's algorithm (see `permutation::hilbert::skilling_hilbert_key`).
# The feature stays opt-in so kernel-adjacent / minimal consumers can
# omit even the `fast_hilbert` LUT tables when not needed. Per
# audit-R5 finding #158, we no longer pull the upstream `hilbert` 0.1
# crate (which transitively brought RUSTSEC-2022-0004 +
# RUSTSEC-2021-0145 into the dep tree).
permutation_hilbert = ["std", "dep:fast_hilbert"]
# HNSW builder (`similarity::hnsw::build`). std-gated; pulls in
# `rand_chacha` for SLSA-L3-deterministic level assignment per
# `docs/hnsw/research/DETERMINISM.md`. Walker (search-only path) does
# NOT require this feature; `try_search` and the read-side surface
# stay reachable in the kernel-default `--no-default-features
# --features alloc` build.
hnsw-build = ["std", "dep:rand_chacha", "dep:rand_core"]

[dependencies]
cfg-if.workspace = true
bytemuck = { version = "1", optional = true }
libm = "0.2"
rayon = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
blake3 = { version = "1", default-features = false, features = ["std"], optional = true }
# Hilbert curve 2D LUT (gated on `permutation_hilbert` feature). MIT-
# licensed, no_std-compatible, no transitive deps. The N-D path is
# implemented in `permutation::hilbert::skilling_hilbert_key` to avoid
# pulling the upstream `hilbert` 0.1 crate's vulnerable transitive
# deps (see audit-R5 finding #158).
fast_hilbert = { version = "2", optional = true }
# ChaCha8 deterministic RNG for the HNSW builder (similarity::hnsw::build).
# Per docs/hnsw/research/DETERMINISM.md — explicitly required for
# reproducible SLSA-L3 builds. Optional + gated on `hnsw-build`.
rand_chacha = { version = "0.9", optional = true }
rand_core = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
serde_json = "1"
# Mature pure-Rust succinct data structures crate. Used as a parity oracle
# for `bits::rank_select` tests only; not a runtime dependency.
sucds = "0.8"
# Hardware-counter benches under valgrind+callgrind. Deterministic across
# runs on the same binary (instruction count, branch misses, cache
# references), so the iai-bench CI workflow can use a tight 1% regression
# threshold on instruction count instead of the 15% noise budget the
# wall-clock criterion benches need (audit-R10 T3.4).
#
# `cargo build` doesn't require valgrind; running the benches does. Local
# devs without valgrind installed simply skip `cargo bench --bench iai_*`
# and use the criterion benches.
iai-callgrind = "0.16"

[[bench]]
name = "histogram"
harness = false
required-features = ["bench-internals"]

# `primitives` reaches into per-backend modules
# (`sketch::kernels::sse42`, `byteclass::kernels::avx2`,
# `fingerprint::kernels::avx2`); keep it gated on `arch-pinned-kernels`
# alongside `bench-internals`.
[[bench]]
name = "primitives"
harness = false
required-features = ["bench-internals", "arch-pinned-kernels", "userspace"]

# `similarity` exercises both the panicking surface (signature_batch_simd
# etc.) and pinned scalar parity wrappers, so it needs both.
[[bench]]
name = "similarity"
harness = false
required-features = ["userspace", "arch-pinned-kernels"]

[[bench]]
name = "planner"
harness = false

[[bench]]
name = "hash_batched"
harness = false
required-features = ["userspace"]

# `bits_popcount` benchmarks the pinned `bits::popcount::kernels::*`
# backends head-to-head.
[[bench]]
name = "bits_popcount"
harness = false
required-features = ["arch-pinned-kernels"]

# `bits_bit_pack` exercises both the panicking surface
# (DynamicBitPacker::new etc.) and pinned per-backend bit_pack kernels.
[[bench]]
name = "bits_bit_pack"
harness = false
required-features = ["userspace", "arch-pinned-kernels"]

# `bits_streamvbyte` exercises both the panicking encode/decode entries
# and the pinned `streamvbyte::kernels::*` backends head-to-head.
[[bench]]
name = "bits_streamvbyte"
harness = false
required-features = ["userspace", "arch-pinned-kernels"]

[[bench]]
name = "bits_rank_select"
harness = false
required-features = ["userspace"]

# `hash_set_membership` exercises both the panicking surface and the
# pinned `set_membership::kernels::*` backends head-to-head.
[[bench]]
name = "hash_set_membership"
harness = false
required-features = ["userspace", "arch-pinned-kernels"]

# `bitmap_set_ops` exercises the pinned `bitmap::kernels::*` backends
# head-to-head.
[[bench]]
name = "bitmap_set_ops"
harness = false
required-features = ["arch-pinned-kernels"]

# `permutation_rcm` exercises pinned scalar permutation kernels.
[[bench]]
name = "permutation_rcm"
harness = false
required-features = ["arch-pinned-kernels"]

# `approx_hll` exercises the pinned `approx::hll_kernels::*` backends.
[[bench]]
name = "approx_hll"
harness = false
required-features = ["arch-pinned-kernels"]

# `approx_bloom` exercises the pinned `approx::bloom_kernels::*` backends.
[[bench]]
name = "approx_bloom"
harness = false
required-features = ["arch-pinned-kernels"]

# `iai_primitives` runs deterministic hardware-counter benches under
# valgrind+callgrind on a focused subset of hot primitives (popcount,
# streamvbyte encode/decode, sha256, vector dot/l2). Used by
# `.github/workflows/iai-bench.yml` to catch instruction-count
# regressions at ~1% sensitivity (audit-R10 T3.4).
[[bench]]
name = "iai_primitives"
harness = false
required-features = ["arch-pinned-kernels"]

# Examples that reach into per-backend pinned kernels for head-to-head
# benchmark / parity demos. Without `arch-pinned-kernels` those modules
# are crate-private, so the examples are gated to match.
[[example]]
name = "bench_compare"
required-features = ["arch-pinned-kernels"]

[[example]]
name = "profile_primitives"
required-features = ["arch-pinned-kernels"]

[[example]]
name = "similarity_scan"
required-features = ["userspace", "arch-pinned-kernels"]

# Integration tests that pin specific backends to assert SIMD parity
# with the scalar oracle. They need `arch-pinned-kernels` to reach the
# per-backend modules; the dispatched APIs are exercised by the
# unit-test suite under `--lib`.
[[test]]
name = "avx2_parity"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "fingerprint_f22"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "integration_phase_c"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "neon_parity"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "parity"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "public_histogram_api"
required-features = ["arch-pinned-kernels"]

[[test]]
name = "histogram_kernels"
required-features = ["bench-internals"]

[[test]]
name = "sve_parity"
required-features = ["arch-pinned-kernels"]

# Examples that compose multiple primitives via the ergonomic panicking
# entry points (audit-R5 #157 moved these behind `panicking-shape-apis`).
# The kernel/FUSE deployment build (no-default-features + alloc) does not
# need them, so gate them out there.
[[example]]
name = "build_pipeline"
required-features = ["userspace"]

[[example]]
name = "inverted_index"
required-features = ["userspace"]

[[example]]
name = "dispatch_explain"
required-features = ["userspace"]

[lints]
workspace = true
